<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="DeviceState" Id="{f35ef392-fe61-4cc8-bc58-e78f79811612}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE DeviceState :
(
	Init := 0,
	Idle := 1,
	MoveToPickUp := 2,
	PickUpDown := 3,
	PickUpUp := 4,
	MoveX := 5,
	MoveY := 6,
	DropDown := 7,
	DropUp := 8,
	PalletFull := 9
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>