<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="MAIN" Id="{a4f99ad4-3d99-4cc3-aec6-4b8f25d45e95}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	Timer1 :TON;
	Timer2 :TON;
	Start  :BOOL;
	Full   :BOOL;
	PosX   :INT;
	PosY   :INT;
	CurrentState  :DeviceState;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE CurrentState OF
	DeviceState.Init:
		GVL_IO.SVONX_SERVO_ON_tableX 	  := TRUE;
		GVL_IO.SVONY_SERVO_ON_translY 	  := TRUE;
		GVL_IO.SETONX_ORIGIN_tableX 	  := TRUE;
		GVL_IO.SETONY_ORIGIN_translationY := TRUE;
		
		Timer1(IN:= TRUE, PT:= T#60MS);
		//TO IDLE
		IF Timer1.Q AND NOT GVL_IO.BUSYX_BUSY_tableX AND NOT GVL_IO.BUSYY_BUSY_traslationY AND GVL_IO.SETONX_ORIGIN_tableX AND GVL_IO.SETONY_ORIGIN_translationY THEN
			CurrentState := DeviceState.Idle;
			END_IF	
			
	DeviceState.Idle:
		//TO MOVE TO PICK UP
		IF FULL THEN
			CurrentState := DeviceState.PalletFull;
			END_IF
		//TO IDLE
		IF NOT GVL_IO.dp2_Cover_detection THEN // AND MSG.Received AND MSG.Send(NoCover) !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
			CurrentState := DeviceState.Idle;
			END_IF
		//TO PALLET FULL
		IF GVL_IO.dp1_Can_detection AND GVL_IO.dp2_Cover_detection AND NOT Full THEN // AND MSG.Received !!!!!!!!!!!!!!!!!!!!
			CurrentState := DeviceState.PalletFull;
			END_IF
		
	DeviceState.MoveToPickUp:
		GVL_IO.INY0_from_Input0_translY := TRUE;
		GVL_IO.INY1_from_Input1_translY := FALSE;	
		GVL_IO.INY2_from_Input2_translY := TRUE;
		
		GVL_IO.INX0_from_Input0_tableX := FALSE;
		GVL_IO.INX1_from_Input1_tableX := FALSE;	
		GVL_IO.INX2_from_Input2_tableX := TRUE;
		
		Timer1(IN:= TRUE, PT:= T#15MS);
		IF Timer1.Q THEN
			GVL_IO.DRIVEY_MOVE_translY := TRUE;
			GVL_IO.DRIVEX_MOVE_tableX  := TRUE;
			Timer2(IN:= TRUE, PT:= T#150MS);
 			END_IF
		//TO PICK-UP DOWN
		IF Timer2.Q AND NOT GVL_IO.BUSYY_BUSY_traslationY AND NOT GVL_IO.BUSYX_BUSY_tableX THEN
			CurrentState := DeviceState.PickUpDown;
			END_IF
	
	DeviceState.PickUpDown:
		IF GVL_IO.a_0_Vertical_Zaxis_upward THEN
			GVL_IO.Aplus_Vert_axis_downwards := TRUE;
			END_IF
		IF GVL_IO.a_1_Vertical_Zaxis_downward THEN
			GVL_IO.Vplus_Vacuum_start := TRUE;
			Timer1(IN:= TRUE, PT:= T#10MS);
			END_IF
		//TO PICK-UP UP
		IF Timer1.Q THEN
			CurrentState := DeviceState.PickUpUp;
			END_IF
	
	DeviceState.PickUpUp:
		GVL_IO.Aplus_Vert_axis_downwards := FALSE;
		//TO MOVE X
		IF GVL_IO.a_0_Vertical_Zaxis_upward THEN
			CurrentState := DeviceState.MoveX;
			END_IF		
	
	DeviceState.MoveX:
		//SwitchMoveX(); !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
		
		PosX := PosX + 1;
		IF PosX >= 4 THEN
			PosX := 0; 
			PosY := PosY + 1;
			END_IF	
		IF PosY >= 4 AND PosX >= 4 THEN
		 	Full := TRUE;
			END_IF	
		//TO MOVE Y
		IF NOT GVL_IO.BUSYX_BUSY_tableX THEN
			CurrentState := DeviceState.MoveY;
			END_IF
	
	DeviceState.MoveY:
		//SwitchMoveY(); !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
		
		//TO DROP DOWN
		IF NOT GVL_IO.BUSYY_BUSY_traslationY THEN
			CurrentState := DeviceState.DropDown;
			END_IF
			
	DeviceState.DropDown:
		IF GVL_IO.a_0_Vertical_Zaxis_upward THEN
			GVL_IO.Aplus_Vert_axis_downwards := TRUE;
			END_IF
		IF GVL_IO.a_1_Vertical_Zaxis_downward THEN
			GVL_IO.Vplus_Vacuum_start := TRUE;
			Timer1(IN:= TRUE, PT:= T#10MS);
			END_IF
		//TO DROP UP
		IF NOT Timer1.Q THEN
			CurrentState := DeviceState.DropUp;
			END_IF
	
	DeviceState.DropUp:
		IF GVL_IO.a_1_Vertical_Zaxis_downward THEN
			GVL_IO.Aplus_Vert_axis_downwards := FALSE;
			END_IF
		//TO IDLE
		IF GVL_IO.a_0_Vertical_Zaxis_upward THEN
			CurrentState := DeviceState.Idle;
			END_IF
	
	DeviceState.PalletFull:
		//SendMSG(FULL); !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
		GVL_IO.BR_Alarm_light := TRUE;
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="81" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="228" Count="1" />
      <LineId Id="231" Count="1" />
      <LineId Id="239" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="235" Count="1" />
      <LineId Id="233" Count="0" />
      <LineId Id="254" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="289" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="288" Count="0" />
      <LineId Id="247" Count="1" />
      <LineId Id="246" Count="0" />
      <LineId Id="287" Count="0" />
      <LineId Id="252" Count="1" />
      <LineId Id="251" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="255" Count="1" />
      <LineId Id="259" Count="1" />
      <LineId Id="262" Count="1" />
      <LineId Id="261" Count="0" />
      <LineId Id="257" Count="0" />
      <LineId Id="264" Count="1" />
      <LineId Id="267" Count="1" />
      <LineId Id="270" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="271" Count="2" />
      <LineId Id="258" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="276" Count="3" />
      <LineId Id="281" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="282" Count="3" />
      <LineId Id="275" Count="0" />
      <LineId Id="216" Count="0" />
      <LineId Id="291" Count="0" />
      <LineId Id="296" Count="0" />
      <LineId Id="293" Count="2" />
      <LineId Id="292" Count="0" />
      <LineId Id="217" Count="0" />
      <LineId Id="297" Count="0" />
      <LineId Id="352" Count="0" />
      <LineId Id="299" Count="1" />
      <LineId Id="346" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="347" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="350" Count="1" />
      <LineId Id="314" Count="0" />
      <LineId Id="303" Count="2" />
      <LineId Id="298" Count="0" />
      <LineId Id="218" Count="0" />
      <LineId Id="308" Count="1" />
      <LineId Id="313" Count="0" />
      <LineId Id="311" Count="1" />
      <LineId Id="310" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="316" Count="0" />
      <LineId Id="318" Count="1" />
      <LineId Id="321" Count="1" />
      <LineId Id="324" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="327" Count="2" />
      <LineId Id="326" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="332" Count="1" />
      <LineId Id="337" Count="0" />
      <LineId Id="334" Count="2" />
      <LineId Id="331" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="341" Count="1" />
      <LineId Id="188" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>